--- a/src/app/page/ciudad/ciudad-creaedita/ciudad-creaedita.component.html
+++ b/src/app/page/ciudad/ciudad-creaedita/ciudad-creaedita.component.html
@@ -1,23 +1,23 @@
 <div class="container">
     <br>
     
-    <h1 class="buttons">Ciudad</h1>
+    <h1>Ciudad</h1>
   
-    <mat-form-field class="example-full-width">
+    <mat-form-field>
       <mat-label>ID</mat-label>
       <input matInput placeholder="id" [(ngModel)]="ciudad.idCiudad">
     </mat-form-field>
   
     <br>
   
-    <mat-form-field class="example-full-width">
+    <mat-form-field>
       <mat-label>Nombre</mat-label>
       <input matInput required placeholder="nombre" [(ngModel)]="ciudad.nombreCiudad">
   
     </mat-form-field>
   
     <br>
-    <button class="buttons" mat-raised-button color="primary" (click)="aceptar()">Aceptar</button>
+    <button mat-raised-button color="primary" (click)="aceptar()">Aceptar</button>
     <button mat-raised-button color="warn" routerLink="/ciudad">Cancelar</button>
     <p>{{mensaje}}</p>
   
