--- a/src/app/page/distrito/distrito-creaedita/distrito-creaedita.component.html
+++ b/src/app/page/distrito/distrito-creaedita/distrito-creaedita.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-
+<br>
     <h1>Distrito</h1>
   
-    <mat-form-field class="example-full-width">
+    <mat-form-field>
       <mat-label>Id</mat-label>
       <input matInput placeholder="Id" [(ngModel)]="distrito.idDistrito">
     </mat-form-field>
   
     <br>
   
-    <mat-form-field class="example-full-width">
+    <mat-form-field>
       <mat-label>Nombre</mat-label>
       <input matInput required placeholder="nombre" [(ngModel)]="distrito.nombreDistrito">
     </mat-form-field>
