--- a/src/app/page/objeto/objeto-reporte/objeto-reporte.component.html
+++ b/src/app/page/objeto/objeto-reporte/objeto-reporte.component.html
@@ -1,20 +1,12 @@
 <div class="container">
     <div style=" text-align: center;">
       <br>
-      <h1>Lista de objetos</h1>
-    </div>
-    <app-objeto-buscar></app-objeto-buscar>
-
-    <div class="example-button-container">
-  
-      <button mat-stroked-button color="primary" aria-label="Example icon button with a plus one icon"
-        routerLink="/objeto/agregar">
-        <mat-icon>add</mat-icon>
-      </button>
+      <h1>Reporte de objetos categoria Personal</h1>
     </div>
     <div style=" text-align: center;">
-      <a mat-raised-button [routerLink]="['/','objeto','reportes']" style="margin-left:auto;">Reporte de objetos categoria Personal</a>
-    </div>
+        <br>
+        <a mat-raised-button [routerLink]="['/','objeto']" style="margin-left:auto;">Volver</a>
+      </div>
 <br>
     <div>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" border="5" >
@@ -67,15 +59,6 @@
         <ng-container matColumnDef="estado">
           <th mat-header-cell *matHeaderCellDef> Estado </th>
           <td mat-cell *matCellDef="let element"> {{element.estadoObjeto.nombreEstadoObjeto}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="acciones">
-          <th mat-header-cell *matHeaderCellDef > Acciones </th>
-          <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary" style="margin-left: 22%;"
-              [routerLink]="['edicion', element.idObjeto]">Actualizar</button>
-              <button mat-raised-button color="accent" (click)="confirmar(element.idObjeto)" style="margin-left: 22%;">Eliminar</button>
-          </td>
-          
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
