--- a/src/app/page/reporte/reporte-creaedita/reporte-creaedita.component.css
+++ b/src/app/page/reporte/reporte-creaedita/reporte-creaedita.component.css
@@ -3,6 +3,12 @@
     max-width: 500px;
     width: 100%;
   }
+
+  div {
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
   
   .example-full-width {
     width: 100%;
